@@ -1,3 +1,0 @@
-usr/lib/libusbip.la
-usr/lib/libusbip.a
-usr/include/usbip/*
