@@ -616,7 +616,7 @@ install-perf: $(STAMPS_DIR)/build-tools
 	dh_md5sums
 	dh_builddeb
 
-install-usbip: DH_OPTIONS = -plibusbip-dev -pusbip
+install-usbip: DH_OPTIONS = -pusbip
 install-usbip: DIR = $(CURDIR)/debian/usbip-tmp
 install-usbip: $(STAMPS_DIR)/build-tools
 	dh_testdir
