@@ -54,17 +54,6 @@ Description: Performance analysis tools for Linux @version@
  The linux-base package contains a 'perf' command which will invoke the
  appropriate version for the running kernel.
 
-Package: libusbip-dev
-Build-Profiles: <!stage1 !pkg.linux.notools>
-Architecture: linux-any
-Depends: ${misc:Depends}
-Section: libdevel
-Description: USB device sharing system over IP network (development files)
- USB/IP is a system for sharing USB devices over the network.
- .
- This package provides headers for the libusbip library and
- the library itself for static linking.
-
 Package: usbip
 Build-Profiles: <!stage1 !pkg.linux.notools>
 Architecture: linux-any
